@@ -18,7 +18,6 @@
     <name>xts crash recovery tests</name>
     <description>xts crash recovery tests</description>
     <properties>
-        <general.server.jvm.args>-Xms64m -Xmx1024m -XX:MaxPermSize=512m</general.server.jvm.args>
         <ipv4.server.jvm.args></ipv4.server.jvm.args>
         <ipv6.server.jvm.args>-Djboss.bind.address=[::1] -Djboss.bind.address.management=[::1] -Djboss.bind.address.unsecure=[::1] -Djava.net.preferIPv4Stack=false -Djava.net.preferIPv6Addresses=true</ipv6.server.jvm.args>
         <server.debug.args>Xdebug -Xnoagent -Djava.compiler=NONE -Xrunjdwp:transport=dt_socket,server=y,suspend=n,address=5006</server.debug.args>
@@ -56,7 +55,7 @@
                             <forkMode>once</forkMode>
                             <workingDirectory>.</workingDirectory>
                             <systemPropertyVariables combine.children="append">
-                                <server.jvm.args>${general.server.jvm.args} ${ipv4.server.jvm.args}</server.jvm.args>
+                                <server.jvm.args>${jvm.args.memory} ${ipv4.server.jvm.args}</server.jvm.args>
                                 <node.address>127.0.0.1</node.address>
                             </systemPropertyVariables>
                         </configuration>
@@ -81,7 +80,7 @@
                             <CLI_IPV6_OPTS>-Djava.net.preferIPv4Stack=false -Djava.net.preferIPv6Addresses=true</CLI_IPV6_OPTS>
                             </environmentVariables>
                             <systemPropertyVariables combine.children="append">
-                                <server.jvm.args>${general.server.jvm.args} ${ipv6.server.jvm.args}</server.jvm.args>
+                                <server.jvm.args>${jvm.args.memory} ${ipv6.server.jvm.args}</server.jvm.args>
                                 <node.address>[::1]</node.address>
                             </systemPropertyVariables>
                         </configuration>
